5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1613_2425.log
== TEST (2019-04-14 15:08:28) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input("km/l"(media,3))

-- ERROR:
File "XXXX", line 6
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:08:38) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input("km/l"(media,3))

-- ERROR:
File "XXXX", line 6
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:08:38) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input("km/l"(media,3))

-- ERROR:
File "XXXX", line 6
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:08:41) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input("km/l"(media,3))

-- ERROR:
File "XXXX", line 6
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:08:42) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input("km/l"(media,3))

-- ERROR:
File "XXXX", line 6
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:08:43) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input("km/l"(media,3))

-- ERROR:
File "XXXX", line 6
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:23:12) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input("km/l"(media,3))

-- EXECUTION TIME:
0.23141
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:36:56) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input((media,3 + "km/l"))

-- ERROR:
File "XXXX", line 6
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:38:19) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(input(("media,3 + km/l"))

-- ERROR:
File "XXXX", line 6
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:38:41) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3 + "km/l"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(media,3 + "km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:39:32) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media + "km/l",3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(media + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:41:07) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3))+("km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(media,3))+("km/l")
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:43:28) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3("km/l"))


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:43:53) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(media,3("km/l")))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:44:45) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3)+("km/l")


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:44:52) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3)+"km/l"


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:46:02) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3))+"km/l"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(media,3))+"km/l"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:47:01) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
(print(round(media,3))+"km/l"


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:48:10) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
"km/l"print(round(media,3))


-- ERROR:
File "XXXX", line 5
    "km/l"print(round(media,3))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:48:13) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
"km/l"print(round(media,3))


-- ERROR:
File "XXXX", line 5
    "km/l"print(round(media,3))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:48:54) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print("km/l")
print(round(media,3))


-- OUTPUT:
km/l
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:50:22) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3,km/l))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(media,3,km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:52:13) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3)+ "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(media,3)+ "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:55:10) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(float(round(media,3) + "km/l")


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:44:49) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(float(round("media,3/km/l")


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:48:41) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3)


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:49:04) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)
print(round(media,3)


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:49:21) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3)


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:49:30) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:50:21) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3)+"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(media,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:51:06) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3)"km/l")


-- ERROR:
File "XXXX", line 6
    print(round(media,3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:51:20) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3("km/l")


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:52:33) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(input(media,3("digite o si")


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:52:41) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(input(media,3("digite o si"))


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:52:55) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(input(media,3("digite o si")))


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:53:03) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(input(media,3("digite o si"))))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(input(media,3("digite o si"))))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:53:53) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(media,3("km/l")))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:54:10) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3+"km/l"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(media,3+"km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:54:34) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(int(media,3+"km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(int(media,3+"km/l")))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:54:57) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(str(media,3+"km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(str(media,3+"km/l")))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:55:18) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3+"km/l"))
str("km/l")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(media,3+"km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:56:53) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media,3\"km/l"))

-- ERROR:
File "XXXX", line 6
    print(round(media,3\"km/l"))
                               ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:57:35) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)

print(round(media + "km/l",3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(media + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:58:13) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)+"km/l"

print(round(media,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media=(s/cg)+"km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:58:21) 
-- CODE:
s=float(input("digite o numero:"))
cg=float(input("digite o numero:"))

media=(s/cg)+"km/l"

print(round(media,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media=(s/cg)+"km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:01:40) 
-- CODE:
s=float(input("digite o numero:\km"))
cg=float(input("digite o numero:\l"))

media=(s/cg)

print(round(media,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:02:59) 
-- CODE:
s=float(input("digite o numero:")+("km")
cg=float(input("digite o numero:\l")+("l")

media=(s/cg)+("km/l")

print(round(media,3))

-- ERROR:
File "XXXX", line 2
    cg=float(input()+("l")
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:03:09) 
-- CODE:
s=float(input("digite o numero:")+("km")
cg=float(input("digite o numero:\l")+("l")

media=(s/cg)

print(round(media,3))

-- ERROR:
File "XXXX", line 2
    cg=float(input()+("l")
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:05:25) 
-- CODE:
distancia=float(input("digite o numero:"))
consumo=float(input("digite o numero:"))

media=(distancia/consumo)

print(round(media,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:08) 
-- CODE:
distancia=float(input("digite o numero:"))
consumo=float(input("digite o numero:"))

media=(distancia/consumo)
mensagem="km/l"
print(round(media,3)mensagem)

-- ERROR:
File "XXXX", line 6
    print(round(media,3)mensagem)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:53) 
-- CODE:
distancia=float(input("digite o numero:"))
consumo=float(input("digite o numero:"))

media=(distancia/consumo)
mensagem="km/l"
print(round(media,3 ),mensagem)

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:45:02) 
-- CODE:
distancia=float(input("digite o numero:"))
consumo=float(input("digite o numero:"))

media=(distancia/consumo)
mensagem="km/l"
print(round(media,3 ),mensagem)

-- EXECUTION TIME:
0.1091
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
